--- a/file0.html
+++ b/file0.html
@@ -1,61 +1,53 @@
 <html>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <body style="background:#e8e8e8;">
-  <div id="login">
-	<center>
-	  <h3 style="color:#32b5e3; font-weight:400;">MASUK</h3></center><font color="gray">
-	  <br/>
-		<font size="1dp"><i>
-		<div id="err" style="background:#c8f5c8;text-align:center;padding:3px;color:red; border-radius:4px;font-weight:200;"><font color="green">masukkan data dengan benar</font></div><br/></i></font>
-		<label id="label" for="nisn"> nisn</label><br/>
-		<input type="number" id="nisn"/><br/>
-	  <br/></font>
-	<center>
-	  <br/>
-	  <input type="button" value="LOG IN" onclick="mulai();" class="login"/><br/><br/>
-
-  </div>
-  </center>
-  <div id="mulai"><font size="2dp">
-	  <input type="text" disabled id="waktu" style="
-		margin-top:0px;
-		margin-left:0px;
-		border-radius:7px 0px 7px 0px;
-		font-weight:600;
-		font-family:'calibri';
-		width:40%;
-		background:#32b5e3;
-		color:white;
-		padding:4px;
-      		border:none;
-		vertical-align:center;
-		margin-bottom:3px;
-		text-align:center;
-		"/><font id="mapel" color="green" style="
-font-family:calibri;
-font-weight:100;
-margin-left:30%;
-padding:4px 12px 4px 12px;
-background: #c8f5c8;
-border-radius:7px;
-"></font></font>
-	<font size="2dp">
-	<center><div id="bara" style="background:none; padding:5px margin-bottom:0px;">		 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDSPS60Qnro-KtoXuBfoWJGP3LsRwP5yNTaJeFTT2Ebnn6rA/viewform?embedded=true" width="100%" height="650" frameborder="0" marginheight="0" marginwidth="0">Memuat…</iframe>
-	  <center>
-  </div>
-
-	</div><center>
-	  <i>powered by: <img src="eg.png" style="width:5%"/></i><b>EDU GO</b></center>
-  </font>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<body style="background:#e8e8e8;">
+		<div id="login">
+			<center>
+				<h3 style="color:#32b5e3; font-weight:400;">MASUK</h3>
+				</center>
+				<font color="gray">
+				<br/><font size="1dp"><i>
+					<div id="err" style="background:#c8f5c8;text-align:center;padding:3px;color:red; border-radius:4px;font-weight:200;"><font color="green">masukkan data dengan benar</font></div><br/></i></font>
+						<label id="label" for="nisn"> nisn</label><br/><input type="number" id="nisn"/><br/>
+				<br/></font>
+			<center><br/>
+		<input type="button" value="LOG IN" onclick="mulai();" class="login"/><br/><br/>
+		</div></center>
+		<div id="mulai"><font size="2dp">
+			<center><input type="text" disabled id="waktu" style="
+				margin-top:0px;
+				margin-left:0px;
+				margin-right:0px;
+				border-radius:0px 0px 0px 7px;
+				font-weight:600;
+				font-family:'calibri';
+				width:40%;
+				background:#32b5e3;
+				color:white;
+				padding:4px;
+				border:none;
+				vertical-align:center;
+				margin-bottom:3px;
+				text-align:center;"/>
+				<font id="mapel" color="green" style="
+					font-family:'calibri';
+					font-weight:600;
+					margin-left:-5px;
+					padding:4px 20px 4px 12px;
+					background: #c8f5c8;
+					border-radius:0px 0px 7px 0px;"></font></font><br/><br/>
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDSPS60Qnro-KtoXuBfoWJGP3LsRwP5yNTaJeFTT2Ebnn6rA/viewform?embedded=true" width="100%" height="650" frameborder="0" marginheight="0" marginwidth="0">Memuat…</iframe>
+			</center>
+	</div>
+<center><i>powered by: <img src="eg.png" style="width:5%"/></i><b>EDU GO</b></center>
   <script src="file0.js"></script>
   <script src="nisn.js"></script>
 </html>
 
 
 <style>
-#login{
+#login, #send{
 border:1px solid #d3d3d3;
 display:block; 
 background:white; 
@@ -65,7 +57,7 @@ padding:13%;
 font-size:2dp; 
 font-family:calibri;
 }
-#nisn{
+#nisn, #nama{
 outline:none;
 		background:none;
 		border:none;
@@ -78,7 +70,7 @@ font-weight:400;
 		  transition: all .7s ease;
 
 }
-#nisn:focus{
+#nama:focus, #nisn:focus{
 border-bottom:1px solid #32b5e3;
 color:#32b5e3;
 }
@@ -109,7 +101,44 @@ color:white;
 .login:active{
 background:blue;
 }
-
+input[type=radio   ]:not(old){
+  width     : 2em;
+  margin    : 0;
+  padding   : 0;
+  font-size : 1em;
+  opacity   : 0;
+}
+input[type=radio   ]:not(old) + label{
+  display      : inline-block;
+  margin-left  : -2em;
+  line-height  : 2em;
+  -webkit-transition: all .7s ease;
+		  -moz-transition: all .7s ease;
+		  -o-transition: all .7s ease;  
+		  transition: all .7s ease;
+}
+input[type=radio   ]:not(old) + label > span{
+  display          : inline-block;
+  width            : 0.4em;
+  height           : 0.4em;
+  border-radius    : 100%;
+  margin           : 0.5em 0.5em 0.5em 0.5em;
+  border           : 0.45em solid #ddd;
+  background       : white;
+  vertical-align   : bottom;
+  -webkit-transition: all .7s ease;
+		  -moz-transition: all .7s ease;
+		  -o-transition: all .7s ease;  
+		  transition: all .7s ease;
+}
+input[type=radio   ]:not(old):checked + label > span{
+  background       : white;
+  border           : 0.45em solid #32b5e3;
+  width            : 0.4em;
+  height           : 0.4em;
+  border-radius    : 100%;
+  margin           : 0.5em 0.5em 0.5em 0.5em;
+}
 #tbl{
 padding:5px;
 		  border:none;
@@ -132,7 +161,7 @@ padding:5px;
 		transform: rotate(360deg);
 		}
 		#daf{
-		display:none;
+		display:none; 
 		background:white;
 		border-radius:4px;
 		border:1px solid #32b5e3;
