--- a/file0.html
+++ b/file0.html
@@ -70,7 +70,7 @@ font-weight:400;
 		  transition: all .7s ease;
 
 }
-#nama:focus, #nisn:focus{
+#nisn:focus{
 border-bottom:1px solid #32b5e3;
 color:#32b5e3;
 }
