--- a/file0.html
+++ b/file0.html
@@ -4,6 +4,9 @@
 	<body style="background:#e8e8e8;">
 		<div id="login">
 			<center>
+				<img src="https://drive.google.com/uc?authuser=0&id=1SaQ3Qy2hqNtz_Ej0TgEQasYaR4sns_kP&export=download" style="
+width: 80%;
+"/>
 				<h3 style="color:#32b5e3; font-weight:400;">MASUK</h3>
 				</center>
 				<font color="gray">
